# motiondetector

./: .gitignore  README  autogen.sh  configure.ac  meson.build
src/: Makefile.am  gstmotiondetector.c  gstmotiondetector.cpp  gstmotiondetector.h  gstmotiondetector.hpp
